@@ -16,6 +16,7 @@ Index of used prefices
 ----- - ------------------------------------------------
       - Collection
 ----- - ------------------------------------------------
+5 sni - Single linked node list iterator
 5 snl - Single linked node list
 5 snn - Single linked node
 1 sci - Single linked cell list iterator
