@@ -26,5 +26,6 @@ dcl.fs:
 dni.fs: 102356 
 dci.fs: 102428
 snl.fs: 106396
+sni.fs: 107396
 
 fina: CompileSize=80186 CompileTime=10714 msec TestTime=24450 msec (without floats)
