@@ -1,4 +1,5 @@
 0.5.0
+* sni: new module (Single linked node iterator) (2007-02-27)
 * snl: new module (Single linked node list) (2007-02-26)
 * snn: new module (Single linked node) (2007-02-19)
 * icompare from str.fs to config.fs (2007-02-06)
